--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
               <a href="index.html" class="nav-link fw-semibold">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#details" class="nav-link fw-semibold">Details</a>
+              <a href="index.html#details" class="nav-link fw-semibold">Details</a>
             </li>
             <li class="nav-item">
               <a
